-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.15.2
-
None
-
-
0e4cc2aca7eb77879d20142e761773a891b33f10 (qt/qtbase/dev)
The two functions QTableViewPrivate::heightHintForIndex() and QTableViewPrivate::widthHintForIndex() do not take the span into account which lead to a too big cell when auto-resizing a row or column. See attached testcase. To reproduce it, try to automatically resize the second column with the mouse (double click on the space between second and third vertical header item). Same can be observed for rows.
The original bug report can be found here: https://forum.qt.io/topic/121148/qtableview-using-setspan-doesn-t-resize-as-expected
| For Gerrit Dashboard: QTBUG-89116 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 325612,6 | QTableView: honor spans when calculating height/width hint | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 326624,3 | QTableView: honor spans when calculating height/width hint | 5.15 | qt/qtbase | Status: DEFERRED | +2 | 0 |
| 333319,1 | QTableView: honor spans when calculating height/width hint | tqtc/esm-5.15 | qt/tqtc-qtbase | Status: ABANDONED | 0 | 0 |